# azab-rasa

./: .dockerignore  .env.example  .env.nodocker.example  .env.production.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.actions  Dockerfile.webhook  Makefile  README.md  config.yml  credentials.yml  deploy.sh  docker-compose.prod.yaml  docker-compose.yaml  domain.yml  endpoints.nodocker.yml  endpoints.yml  gcp-f  nginx.conf  pyproject.toml  requirements.txt  run.sh
.cache/matplotlib/: fontlist-v390.json
.config/rasa/: global.yml
actions/: __init__.py  action_human_handoff.py  action_submit_lead.py  form_validation.py
actions/brand_actions/: __init__.py  alazab_construction.py  brand_identity.py  laban_alasfour.py  luxury_finishing.py  uberfix.py
azabot-prod/: package.json  pnpm-lock.yaml
azabot-prod/src/: App.tsx
chatbot-widget/: alazab-chatbot.html  index.html  widget.js
data/brands/: nlu.yml  (+5 more)
database/: uberfix_bot_gateway_schema.sql
docs/: alazab_construction.txt  azabot-production-architecture-report.md  bot-workflow-report.md  nodocker-runbook.md  production-runbook.md  site-test-plan.md  technical-project-report.md
piper-samples/: README.md  espeakng.worker.data  requirements.optional.txt
prompts/: rephraser_arabic_person.jinja2
scripts/: check-nodocker.ps1  check.sh  deploy-server-nodocker.sh  install-uberfix-db.ps1  install-uberfix-db.sh  production-preflight.ps1  register-telegram.sh  run-nodocker.ps1  setup-ssl.sh  smoke-test-sites.ps1  stop-nodocker.ps1  test-preflight.ps1
tests/: test_stories.yml
webhook/: server.py
(+57 files in other folders)
