[project]
name = "alazab-group-rasa-bot"
version = "2.0.0"
description = "Rasa Pro CALM chatbot for Alazab Group — 5 brands, Arabic NLU, LLM-powered"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rasa-pro>=3.16",
  "rasa-sdk>=3.16",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = [
  "actions",
  "actions.*",
  "webhook",
  "webhook.*",
]
exclude = [
  "data",
  "data.*",
  "domain",
  "domain.*",
  "docs",
  "docs.*",
  "logs",
  "logs.*",
  "prompts",
  "prompts.*",
  "tests",
  "tests.*",
]
